--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "0.11.14"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/4wardFabrication/site_new.git"
