--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "0.11.14"
+    "node": "0.11.13"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/4wardFabrication/site_new/issues"
   },
-  "homepage": "https://github.com/4wardFabrication/site_new"
+  "homepage": "https://github.com/4wardFabrication/site_new",
+  "dependencies": {
+    "koa": "^0.18.0",
+    "koa-logger": "^1.2.2",
+    "koa-send": "^1.3.1"
+  }
 }
