hello world koa application

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "4wardFabrications main site. Written in Node and KoaJS.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --harmony app/koa.js"
   },
   "engines": {
     "node": "0.11.13"
