--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/4wardFabrication/site_new",
   "dependencies": {
+    "jade": "^1.9.2",
     "koa": "^0.18.0",
     "koa-logger": "^1.2.2",
+    "koa-render": "^0.2.1",
     "koa-send": "^1.3.1"
   }
 }
