--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jade": "^1.9.2",
     "koa": "^0.18.0",
     "koa-logger": "^1.2.2",
-    "koa-send": "^1.3.1"
+    "koa-send": "^1.3.1",
+    "uglify-js": "^2.4.16"
   }
 }
