--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "koa-logger": "^1.2.2",
     "koa-send": "^1.3.1",
     "uglify-js": "^2.4.16"
+  },
+  "devDependencies": {
+    "jshint": "^2.6.0"
   }
 }
