adding css minification. slight restructuring for production code which is to be improved on.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/4wardFabrication/site_new",
   "dependencies": {
+    "cssmin": "^0.4.2",
     "jade": "^1.9.2",
     "koa": "^0.18.0",
     "koa-logger": "^1.2.2",
