--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa": "^0.18.0",
     "koa-logger": "^1.2.2",
     "koa-send": "^1.3.1",
+    "mailgun": "^0.5.0",
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
