--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jade": "^1.9.2",
     "koa": "^0.18.0",
     "koa-logger": "^1.2.2",
+    "koa-route": "^2.4.0",
     "koa-send": "^1.3.1",
     "mailgun": "^0.5.0",
     "uglify-js": "^2.4.16"
