--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "homepage": "https://github.com/4wardFabrication/site_new",
   "dependencies": {
+    "co-body": "^1.1.0",
     "cssmin": "^0.4.2",
     "jade": "^1.9.2",
     "koa": "^0.18.0",
     "koa-logger": "^1.2.2",
     "koa-route": "^2.4.0",
     "koa-send": "^1.3.1",
-    "mailgun": "^0.5.0",
+    "mailgun-js": "^0.6.8",
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
