--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
-    "jshint": "^2.6.0"
+    "jshint": "^2.6.0",
+    "nodeunit": "^0.9.1"
   }
 }
