--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "jshint": "^2.6.0",
-    "nodeunit": "^0.9.1"
+    "nodeunit": "^0.9.1",
+    "proxyquire": "^1.4.0"
   }
 }
