--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
+    "jasmine-core": "^2.2.0",
     "jshint": "^2.6.0",
+    "karma": "^0.12.31",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
     "nodeunit": "^0.9.1",
     "proxyquire": "^1.4.0"
   }
